@@ -96,7 +96,7 @@ imap.o: imap_gssapi.c
 md5.o imap.o hmac.o smtp.o aux.o pop3.o junk.o: md5.h
 nss.o: nsserr.c
 
-config.h LIBS:
+config.h LIBS: makeconfig
 	$(SHELL) ./makeconfig
 
 install: all
